feat: make it aliagned

--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="keywords" content="HTML Template, site template, seo, marketing, creative, corporate, modern, multipurpose, one page, business, responsive, minimal, saas, startup">
-		<meta name="author" content="LiquidThemes">
-		<meta name="description" content="Hub is a HTML template with high performance, and award-winning design collection.">
-		<meta property="og:title" content="Hub HTML template">
-		<meta property="og:description" content="Hub is a HTML template with high performance, and award-winning design collection.">
+	
+		<!-- Title Tag -->
+		<title>UsageFlow - Optimize Revenue with Advanced Usage and Billing Metering</title>
+	
+		<!-- SEO Meta Tags -->
+		<meta name="keywords" content="UsageFlow, rule engine, quota management, usage metering, optimize revenue, billing optimization, digital services, subscription tracking, business analytics, SaaS, real-time rules, innovative solutions">
+		<meta name="author" content="QuotaBank">
+		<meta name="description" content="UsageFlow by QuotaBank is a cutting-edge rule engine that enhances quota management and usage metering for digital services. Optimize revenue and streamline billing with real-time, dynamic rules tailored to your business needs.">
+	
+		<!-- Open Graph Meta Tags for Social Media -->
+		<meta property="og:title" content="UsageFlow - Advanced Rule Engine for Optimizing Revenue and Quota Management">
+		<meta property="og:description" content="UsageFlow by QuotaBank offers a powerful rule engine designed to optimize revenue, manage quotas, and meter usage efficiently. Ideal for digital services, it provides real-time billing optimization and comprehensive usage tracking.">
 		<meta property="og:type" content="website">
 		<meta property="og:image" content="./assets/images/common/og-image.jpg">
+		<meta property="og:url" content="https://usageflow.io">
+		<meta property="og:site_name" content="UsageFlow">
+	
+		<!-- Additional Meta Tags -->
+		<meta name="robots" content="index, follow">
+	
+		<!-- Favicon -->
+		<link rel="icon" type="image/png" href="./assets/images/common/usageflow/png/icon-only.png">
 
 		<link rel="stylesheet" href="./assets/vendors/liquid-icon/lqd-essentials/lqd-essentials.min.css">
 		<link rel="stylesheet" href="./assets/css/theme.min.css">
@@ -21,10 +35,16 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-
-		<title>UsageFlow - Quota Rule Engine</title>
 	</head>
+<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C3RZYJPD5"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
+	gtag('config', 'G-0C3RZYJPD5');
+	</script>
 	<body data-mobile-nav-breakpoint="1199" data-mobile-nav-style="modern" data-mobile-nav-scheme="dark" data-mobile-nav-trigger-alignment="right" data-mobile-header-scheme="gray" data-mobile-logo-alignment="default" data-mobile-header-builder="true" data-overlay-onmobile="true" data-disable-animations-onmobile="true">
 		<div id="wrap">
 
@@ -38,7 +58,6 @@
 									<span class="navbar-brand-inner post-rel">
 										<img class="logo-sticky" style="height:24px;" src="./assets/images/common/usageflow/png/logo-no-background.png" alt="StartHub">
 										<img class="logo-default" style="height:42px;"  src="./assets/images/common/usageflow/png/logo-no-background.png" alt="StartHub">
-
 									</span>
 								</a>
 							</div>
@@ -54,83 +73,18 @@
 							<div class="module-primary-nav flex link-14">
 								<div class="link-font-medium navbar-collapse inline-flex p-0 lqd-submenu-default-style" aria-expanded="false" role="navigation">
 									<ul class="main-nav flex reset-ul inline-ul lqd-menu-counter-right lqd-menu-items-inline main-nav-hover-fill lqd-submenu-toggle-hover link-white" data-submenu-options='{"toggleType": "fade", "handler": "mouse-in-out"}' data-localscroll="true" data-localscroll-options='{"itemsSelector":"> li > a", "trackWindowScroll": true, "includeParentAsOffset": true}'>
-										<!-- <li class="menu-item-home is-active">
-											<a href="#banner">
-												<span>Home</span>
-												<span class="link-icon inline-flex hide-if-empty right-icon">
-													<i class="lqd-icn-ess icon-ion-ios-arrow-down"></i>
-												</span>
-											</a>
-										</li>
-										<li>
-											<a href="#about">
-												<span>About</span>
-												<span class="link-icon inline-flex hide-if-empty right-icon">
-													<i class="lqd-icn-ess icon-ion-ios-arrow-down"></i>
-												</span>
-											</a>
-										</li>
-										<li class="menu-item-has-children position-applied">
-											<a href="#services">
-												<span>Services</span>
-												<span class="submenu-expander">
-													<svg xmlns="http://www.w3.org/2000/svg" width="21" height="32" viewBox="0 0 21 32" style="width: 1em; height: 1em;">
-														<path fill="currentColor" d="M10.5 18.375l7.938-7.938c.562-.562 1.562-.562 2.125 0s.562 1.563 0 2.126l-9 9c-.563.562-1.5.625-2.063.062L.437 12.562C.126 12.25 0 11.876 0 11.5s.125-.75.438-1.063c.562-.562 1.562-.562 2.124 0z"></path>
-													</svg>
-												</span>
-												<span class="link-icon inline-flex hide-if-empty right-icon">
-													<i class="lqd-icn-ess icon-ion-ios-arrow-down"></i>
-												</span>
-											</a>
-										</li>
-										<li>
-											<a href="#clients">
-												<span>Customer Stories</span>
-												<span class="link-icon inline-flex hide-if-empty right-icon">
-													<i class="lqd-icn-ess icon-ion-ios-arrow-down"></i>
-												</span>
-											</a>
-										</li>
-										<li>
-											<a href="#contact">
-												<span>Contact</span>
-												<span class="link-icon inline-flex hide-if-empty right-icon">
-													<i class="lqd-icn-ess icon-ion-ios-arrow-down"></i>
-												</span>
-											</a>
-										</li> -->
-									</ul>
+					</ul>
 								</div>
 							</div>
 						</div>
 						<div class="w-25percent flex items-center justify-end mr-20 lg:w-60percent lg:mr-0">
 							<div class="flex items-center justify-end">
 								<div class="module-social lg:hidden">
-									<!-- <div class="social-icons-wrapper justify-end">
-										<span class="grid-item">
-											<a href="#" class="icon social-icon animation-pulse-grow items-center text-15 text-white-30" target="_blank">
-												<span class="sr-only">Facebook</span>
-												<svg class="text-15" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512" fill="currentColor"><path d="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z"/></svg>
-											</a>
-										</span>
-										<span class="grid-item">
-											<a href="#" class="icon social-icon animation-pulse-grow items-center text-15 text-white-30" target="_blank">
-												<span class="sr-only">Twitter</span>
-												<svg class="text-15" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512" fill="currentColor"><path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"/></svg>
-											</a>
-										</span>
-										<span class="grid-item">
-											<a href="#" class="icon social-icon animation-pulse-grow items-center text-15 text-white-30" target="_blank">
-												<span class="sr-only">Github</span>
-												<svg class="text-15" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 496 512" fill="currentColor"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
-											</a>
-										</span>
-									</div> -->
 								</div>
-								<a href="https://dashboard.UsageFlow.net/auth/login" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
+								<a href="https://dashboard.quotabank.net/auth/login" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
 									<span class="btn-txt" data-text="Send a message">Login</span>
 								</a>
-								<a href="https://dashboard.UsageFlow.net/auth/register" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
+								<a href="https://dashboard.quotabank.net/auth/register" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
 									<span class="btn-txt" data-text="Send a message">Signup</span>
 								</a>
 								<div class="ml-15 ld-module-sd ld-module-sd-hover ld-module-sd-right xxl:hidden lg:block">
@@ -281,7 +235,7 @@
 												</p>
 											</div>
 											<div class="mb-35 relative animation-element flex row items-center justify-center">
-												<a href="https://dashboard.UsageFlow.net" target="_blank" class="btn btn-solid btn-hover-txt-liquid-x-alt rounded-100 bg-white font-medium  text-red-700 module-btn-md" style="padding: 14px 20px">
+												<a href="https://dashboard.quotabank.net" target="_blank" class="btn btn-solid btn-hover-txt-liquid-x-alt rounded-100 bg-white font-medium  text-red-700 module-btn-md" style="padding: 14px 20px">
 														<span>Get Started Today!</span>
 												</a>
 											</div>
@@ -563,17 +517,14 @@
 																			Start by creating an account with UsageFlow and get your API key. Integrate UsageFlow into your system with just two lines of code—no advanced coding skills required.																		</span>
 																	</p>
 										<div>
-											<a href="https://dashboard.UsageFlow.net/auth/register" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
+											<a href="https://dashboard.quotabank.net/auth/register" target="_blank" class="btn btn-solid text-white bg-gray-600 xs:hidden rounded-100 ml-10 text-15 font-medium bg-gray-600 hover:text-black hover:bg-white module-btn-sm">
 												<span class="btn-txt" data-text="Send a message">Start Now!</span>
 											</a>
 										</div>
 																</div>
-															</div>
-																<div class="col col-12 p-0 flex justify-center" style="height: 200px">
-										
+																<div class="col col-12 p-0 flex justify-center mb-100" style="height: 880px;">
+																	<iframe width="100%"  height="100%" src="https://www.youtube.com/embed/ZjGIMSuqjag" frameborder="0" allowfullscreen></iframe>
 																</div>
-																
-															</div>
 													</div>
 												</div>
 											</div>
@@ -968,7 +919,7 @@ curl --location --request POST
 		};
 
 		console.log("emailData", emailData)
-		fetch('https://dashboard.UsageFlow.net/api/slack', {
+		fetch('https://dashboard.quotabank.net/api/slack', {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/json'
