--- a/privacy.html
+++ b/privacy.html
@@ -5,17 +5,26 @@
 	<title>UsageFlow - Privacy Policy</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords"
-		content="Quota Bank, resource management, optimization, efficiency, sustainability, business solutions">
-	<meta name="author" content="UsageFlow">
-	<meta name="description"
-		content="UsageFlow offers a centralized platform for effective resource management, optimization, and sustainability solutions.">
-	<meta property="og:title" content="UsageFlow - Resource Management Platform">
-	<meta property="og:description"
-		content="UsageFlow offers a centralized platform for effective resource management, optimization, and sustainability solutions.">
+
+	<!-- SEO Meta Tags -->
+	<meta name="keywords" content="UsageFlow, rule engine, quota management, usage metering, optimize revenue, billing optimization, digital services, subscription tracking, business analytics, SaaS, real-time rules, innovative solutions">
+	<meta name="author" content="QuotaBank">
+	<meta name="description" content="UsageFlow by QuotaBank is a cutting-edge rule engine that enhances quota management and usage metering for digital services. Optimize revenue and streamline billing with real-time, dynamic rules tailored to your business needs.">
+
+	<!-- Open Graph Meta Tags for Social Media -->
+	<meta property="og:title" content="UsageFlow - Advanced Rule Engine for Optimizing Revenue and Quota Management">
+	<meta property="og:description" content="UsageFlow by QuotaBank offers a powerful rule engine designed to optimize revenue, manage quotas, and meter usage efficiently. Ideal for digital services, it provides real-time billing optimization and comprehensive usage tracking.">
 	<meta property="og:type" content="website">
-	<meta property="og:image" content="./assets/images/common/usageflow/png/logo-no-background.png">
-	<link rel="icon" type="image/png" href="./assets/images/common/usageflow/png/logo-no-background.png">
+	<meta property="og:image" content="./assets/images/common/og-image.jpg">
+	<meta property="og:url" content="https://usageflow.io">
+	<meta property="og:site_name" content="UsageFlow">
+
+	<!-- Additional Meta Tags -->
+	<meta name="robots" content="index, follow">
+
+	<!-- Favicon -->
+	<link rel="icon" type="image/png" href="./assets/images/common/usageflow/png/icon-only.png">
+
 
 	<link rel="stylesheet" href="./styles/liquid-icon/lqd-essentials/lqd-essentials.min.css">
 	<link rel="stylesheet" href="./styles/css/theme.min.css">
@@ -55,14 +64,14 @@
 
 		<div class="lqd-sticky-placeholder"></div>
 		<main class="content" id="lqd-site-content">
-			<div class="w-full sm:w-full  lqd-imggrp-single block relative">
+			<!-- <div class="w-full sm:w-full  lqd-imggrp-single block relative">
 				<div class="m-24  lqd-imggrp-img-container inline-flex relative items-center justify-center"
 					onclick="goToHomePage(event)">
 					<figure class="w-full relative p-8">
 						<img width="100" height="80" src="./assets/images/common/usageflow/png/logo-no-background.png" alt="UsageFlow">
 					</figure>
 				</div>
-			</div>
+			</div> -->
 			<div id="lqd-contents-wrap">
 
 				<!-- Start Banner -->
@@ -70,9 +79,17 @@
 				<section class="lqd-section terms and conditon pt-80" id="about">
 					<div class="container">
 						<div class="mb-20 ld-fancy-heading relative">
+							<div class="lqd-imggrp-img-container inline-flex relative items-center justify-center"
+								onclick="goToHomePage(event)">
+								<figure class="w-full relative p-8">
+									<img width="320" height="80" src="./assets/images/common/usageflow/png/logo-no-background.png" alt="UsageFlow">
+								</figure>
+							</div>
+						</div>
+						<div class="mb-20 ld-fancy-heading relative">
 							<h2 class="ld-fh-element inline-block relative lqd-highlight-classic lqd-highlight-grow-left mt-0/5em mb-0"
 								data-inview="true" data-transition-delay="true">
-								UsageFlow - </span>
+								</span>
 								<mark class="lqd-highlight">
 									<span class="lqd-highlight-txt">Privacy Policy</span>
 									<span class="left-0 bottom-0 bg-blue-100 lqd-highlight-inner"></span>
@@ -193,7 +210,7 @@
 
 <script>
 	const login = () => {
-		window.open("https://dashboard.UsageFlow.net/auth/login")
+		window.open("https://dashboard.quotabank.net/auth/login")
 	}
 
 	const goToHomePage = () => {
