fix: align names

--- a/privacy.html
+++ b/privacy.html
@@ -106,10 +106,10 @@
 										</p><br /><br />
 										<p
 											class="ld-fh-element inline-block relative text-20 font-bold font-title leading-1/4em mb-0/2em">
-											<span class="text-primary">At Quota Bank, we value and respect the privacy
+											<span class="text-primary">At UsageFlow, we value and respect the privacy
 												of our users. This Privacy Policy explains how we collect, use, and
 												disclose information about you when you use our mobile application,
-												Quota Bank (the "App"). By using the App, you consent to the collection,
+												UsageFlow (the "App"). By using the App, you consent to the collection,
 												use, and disclosure of your information in accordance with this Privacy
 												Policy.</span><br />
 										</p>
@@ -172,7 +172,7 @@
 											<span class="text-primary"><span class="text-primary">7.
 													Indemnification</span>
 										</p><br />
-										You agree to indemnify and hold Quota Bank and its affiliates, directors,
+										You agree to indemnify and hold UsageFlow and its affiliates, directors,
 										officers, employees, and agents harmless from any and all claims, liabilities,
 										damages, costs, and expenses, including reasonable attorneys' fees, arising out
 										of or relating to your use of the App or any violation of these Terms.
@@ -185,7 +185,7 @@
 													at support@UsageFlow.com. We will respond to your inquiry as quickly
 													as possible.
 													<br /><br />
-													Thank you for choosing Quota Bank! We are committed to providing you
+													Thank you for choosing UsageFlow by QuotaBank We are committed to providing you
 													with the best possible service while safeguarding your personal
 													information.</span>
 
