--- a/terms.html
+++ b/terms.html
@@ -98,8 +98,8 @@
 									<div class="ld-fancy-heading relative mb-20 pt-20">
 										<p
 											class="ld-fh-element inline-block relative text-20 font-bold font-title leading-1/4em mb-0/2em">
-											<span class="text-primary">Welcome to Quota Bank! These terms and conditions
-												("Terms") govern your use of the Quota Bank app ("App"), including its
+											<span class="text-primary">Welcome to UsageFlow by QuotaBank These terms and conditions
+												("Terms") govern your use of the UsageFlow app ("App"), including its
 												features, services, and content. By using the App, you agree to be bound
 												by these Terms.</span><br />
 										</p>
@@ -129,10 +129,10 @@
 													Intellectual Property:
 										</p Property:</span><br />
 										3.1. The App and its content, including all data and trademarks obtained
-										through the App, are the property of Quota Bank or its licensors and are
+										through the App, are the property of UsageFlow or its licensors and are
 										protected by copyright, trademark, and other intellectual property laws. You
 										may not reproduce, distribute, modify, or create derivative works of the App
-										or its content without the prior written consent of Quota Bank.
+										or its content without the prior written consent of UsageFlow.
 										<br />
 										<br />
 										<p
@@ -141,7 +141,7 @@
 										</p><br />
 										4.1. The App supplies data related to companies' digital usage and quotas.
 										The user may use the data obtained through the App at their own risk and
-										discretion. Quota Bank shall not be responsible for any use or misuse of the
+										discretion. UsageFlow shall not be responsible for any use or misuse of the
 										data by the user after they are obtained through the App.
 										<br />
 										<br />
@@ -151,9 +151,9 @@
 													Warranties:</span>
 										</p><br />
 										5.1. The App is provided on an "as is" and "as available" basis, without any
-										warranties of any kind, express or implied. Quota Bank does not warrant that
+										warranties of any kind, express or implied. UsageFlow does not warrant that
 										the App will be error-free or uninterrupted, or that any defects in the App
-										will be corrected. Quota Bank does not make any representations or
+										will be corrected. UsageFlow does not make any representations or
 										warranties regarding the use or results of the App or its content in terms
 										of accuracy, reliability, or otherwise.
 										<br /><br />
@@ -162,7 +162,7 @@
 											<span class="text-primary"><span class="text-primary">6. Limitation of
 													Liability:</span>
 										</p><br />
-										6.1. To the maximum extent permitted by law, Quota Bank shall not be liable
+										6.1. To the maximum extent permitted by law, UsageFlow shall not be liable
 										for any direct, indirect, incidental, special, consequential, or punitive
 										damages arising out of or relating to the use or inability to use the App.
 										<br /><br />
@@ -171,7 +171,7 @@
 											<span class="text-primary"><span class="text-primary">7.
 													Indemnification:</span>
 										</p><br />
-										7.1. You agree to indemnify and hold Quota Bank and its affiliates,
+										7.1. You agree to indemnify and hold UsageFlow and its affiliates,
 										directors, officers, employees, and agents harmless from any and all claims,
 										liabilities, damages, costs, and expenses, including reasonable attorneys'
 										fees, arising out of or relating to your use of the App or any violation of
@@ -183,7 +183,7 @@
 													Jurisdiction:</span>
 										</p><br />
 										8.1. These Terms and your use of the App shall be governed by and construed
-										in accordance with the laws of the jurisdiction where Quota Bank is located.
+										in accordance with the laws of the jurisdiction where UsageFlow is located.
 										Any legal action or proceeding arising out of or relating to these Terms or
 										your use of the App shall be brought exclusively in the courts of that
 										jurisdiction.
@@ -193,7 +193,7 @@
 											<span class="text-primary"><span class="text-primary">9. Modifications to
 													the Terms:</span>
 										</p><br />
-										9.1. Quota Bank may modify these Terms at any time, in its sole discretion.
+										9.1. UsageFlow may modify these Terms at any time, in its sole discretion.
 										Your continued use of the App after any such modification constitutes your
 										acceptance of the modified Terms.
 										<br /><br />
@@ -202,7 +202,7 @@
 											<span class="text-primary"><span class="text-primary">10.
 													Termination:</span>
 										</p><br />
-										10.1. Quota Bank may terminate your access to and use of the App at any
+										10.1. UsageFlow may terminate your access to and use of the App at any
 										time, for any reason or no reason, without notice or liability.
 										<br /><br />
 										<p
@@ -210,9 +210,9 @@
 											<span class="text-primary"><span class="text-primary">11. Entire
 													Agreement:</span>
 										</p><br />
-										11.1. These Terms constitute the entire agreement between you and Quota Bank
+										11.1. These Terms constitute the entire agreement between you and UsageFlow
 										regarding your use of the App, superseding any prior agreements between you
-										and Quota Bank. If any provision of these Terms is found to be invalid or
+										and UsageFlow. If any provision of these Terms is found to be invalid or
 										unenforceable, the remaining provisions shall.
 
 										Thank you for being a part of our journey.</span>
