--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
+		<meta name="google-site-verification" content="ajBPP0Leb280NAqx3ew1gBWO15ZHjoIq2ZfudLWBkxU" />
 	</head>
 <!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-0C3RZYJPD5"></script>
